update READMEs with garbage collectos info
Signed-off-by: Pooja Kulkarni <pk@w220-11-v4.eduroam.dynamic.rbg.tum.de>